kubernetes/apps/balasiq/https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware

metadata:
  name: redirect-https
  namespace: balasiq

spec:
  redirectScheme:
    scheme: https
    permanent: true
